# Textractor-py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
tests/: test_textractor.py
textractor_py/: __init__.py  arch.py  process.py  textractor.py
textractor_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
