[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textractor-py"
version = "0.1.0"
description = "Python wrapper for TextractorCLI"
license = { text = "GPL-2.0" }
requires-python = ">=3.10"
dependencies = ["psutil"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
textractor_py = ["bin/x86/*", "bin/x64/*"]